[gd_scene load_steps=42 format=2]

[ext_resource path="res://assets/chara/nitori/Nitori-Sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/battle_sys/hurtbox.gd" type="Script" id=2]
[ext_resource path="res://assets/chara/nitori/fan-Sheet.png" type="Texture" id=3]
[ext_resource path="res://enemy/nitori/nitori.gd" type="Script" id=4]
[ext_resource path="res://enemy/nitori/states/idle.gd" type="Script" id=5]
[ext_resource path="res://enemy/nitori/states/away.gd" type="Script" id=6]
[ext_resource path="res://enemy/nitori/states/near.gd" type="Script" id=7]
[ext_resource path="res://enemy/nitori/states/throw.gd" type="Script" id=8]
[ext_resource path="res://enemy/nitori/states/sign.gd" type="Script" id=9]
[ext_resource path="res://enemy/nitori/states/cannon.gd" type="Script" id=10]
[ext_resource path="res://enemy/nitori/states/hurt.gd" type="Script" id=11]
[ext_resource path="res://enemy/nitori/states/stun.gd" type="Script" id=12]
[ext_resource path="res://enemy/nitori/states/take_off.gd" type="Script" id=13]
[ext_resource path="res://enemy/nitori/states/dead.gd" type="Script" id=14]
[ext_resource path="res://assets/audio/弹幕蓄力.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/audio/nitori/Drum_hi_09.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/audio/nitori/hurt_006.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/audio/nitori/tele_001.wav" type="AudioStream" id=18]
[ext_resource path="res://assets/audio/nitori/hit_004.wav" type="AudioStream" id=19]
[ext_resource path="res://assets/audio/弹幕展开tan.wav" type="AudioStream" id=20]
[ext_resource path="res://assets/audio/击破boss.wav" type="AudioStream" id=21]
[ext_resource path="res://assets/audio/符卡展开.wav" type="AudioStream" id=22]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 16 )

[sub_resource type="Animation" id=2]
resource_name = "run"
length = 0.15
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 24 )

[sub_resource type="Animation" id=5]
resource_name = "away"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52 ]
}

[sub_resource type="Animation" id=6]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 29, 28, 36, 25, 24, 23 ]
}

[sub_resource type="Animation" id=7]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("states/cannon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_animation_end"
} ]
}

[sub_resource type="Animation" id=8]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 33, 34, 35 ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 37 ]
}

[sub_resource type="Animation" id=10]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=11]
resource_name = "near"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 53, 54, 55 ]
}

[sub_resource type="Animation" id=12]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 38, 39, 40, 41 ]
}

[sub_resource type="Animation" id=13]
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 44, 45, 42, 43, 44, 45, 42, 43, 44, 45 ]
}

[sub_resource type="Animation" id=14]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 46, 47, 48, 49, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotator/fan:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("rotator/fan:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 16 ), Vector2( 0, 8 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=15]
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("states/throw")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_throw"
} ]
}

[sub_resource type="Animation" id=16]
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=17]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 0.647059, 0.129412, 0.129412, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "float"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotator:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "stop"
tracks/0/type = "value"
tracks/0/path = NodePath("rotator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[node name="nitori" type="KinematicBody2D"]
position = Vector2( 0, -40 )
collision_layer = 16
script = ExtResource( 4 )

[node name="physic_shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 24 )
shape = SubResource( 1 )

[node name="rotator" type="Node2D" parent="."]

[node name="projectile_pos" type="Position2D" parent="rotator"]
position = Vector2( 16, -8 )

[node name="fan" type="Sprite" parent="rotator"]
texture = ExtResource( 3 )
hframes = 4
frame = 3

[node name="anim" type="AnimationPlayer" parent="rotator/fan"]
autoplay = "run"
anims/run = SubResource( 2 )
anims/stop = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="rotator"]
position = Vector2( -3, 0 )
texture = ExtResource( 1 )
hframes = 8
vframes = 7
frame = 6

[node name="hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 0
script = ExtResource( 2 )

[node name="collider" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 0, 16 )
shape = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 42 )
collide_with_areas = true

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/away = SubResource( 5 )
anims/cannon_down = SubResource( 6 )
anims/cannon_up = SubResource( 7 )
anims/fire = SubResource( 8 )
anims/hit = SubResource( 9 )
anims/idle = SubResource( 10 )
anims/near = SubResource( 11 )
anims/stun = SubResource( 12 )
anims/stun_back = SubResource( 13 )
anims/take_off = SubResource( 14 )
anims/throw = SubResource( 15 )

[node name="anim_fx" type="AnimationPlayer" parent="."]
anims/default = SubResource( 16 )
anims/hurt = SubResource( 17 )

[node name="anim_float" type="AnimationPlayer" parent="."]
autoplay = "float"
anims/float = SubResource( 18 )
anims/stop = SubResource( 19 )

[node name="Tween" type="Tween" parent="."]

[node name="states" type="Node" parent="."]

[node name="idle" type="Node" parent="states"]
script = ExtResource( 5 )

[node name="away" type="Node" parent="states"]
script = ExtResource( 6 )

[node name="Tween" type="Tween" parent="states/away"]

[node name="near" type="Node" parent="states"]
script = ExtResource( 7 )

[node name="Tween" type="Tween" parent="states/near"]

[node name="throw" type="Node" parent="states"]
script = ExtResource( 8 )

[node name="sign" type="Node" parent="states"]
script = ExtResource( 9 )

[node name="cannon" type="Node" parent="states"]
script = ExtResource( 10 )

[node name="Timer" type="Timer" parent="states/cannon"]
one_shot = true

[node name="hurt" type="Node" parent="states"]
script = ExtResource( 11 )

[node name="stun" type="Node" parent="states"]
script = ExtResource( 12 )

[node name="take_off" type="Node" parent="states"]
script = ExtResource( 13 )

[node name="Tween" type="Tween" parent="states/take_off"]

[node name="dead" type="Node" parent="states"]
script = ExtResource( 14 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="throw" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
bus = "sfx"

[node name="fire" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
bus = "sfx"

[node name="hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
bus = "sfx"

[node name="take_off" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="dan" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
bus = "sfx"

[node name="charge" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
bus = "sfx"

[node name="down" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
bus = "sfx"

[node name="sign" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
bus = "sfx"

[connection signal="tween_all_completed" from="states/away/Tween" to="states/away" method="_on_Tween_tween_all_completed"]
[connection signal="tween_all_completed" from="states/near/Tween" to="states/near" method="_on_Tween_tween_all_completed"]
